[workspace]
members = [
    "./contracts/cheddar_3x3_tic_tac_toe",
    "./contracts/cheddar_5x5_tic_tac_toe"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
debug = false
debug-assertions = false
rpath = false
