[package]
name = "cheddar-big-tic-tac-toe"
version = "1.0.0"
authors = ["guacharo", "robert-zaremba"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.0"
near-contract-standards = "4.1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
